@@ -203,8 +203,8 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="true"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="..\..\base\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\..\base\include;$(INTEL_DEF_IA32_INSTALL_DIR)MKL\Include;$(INTEL_DEF_IA32_INSTALL_DIR)MKL\Include\fftw;$(INTEL_DEF_IA32_INSTALL_DIR)MKL\Include\ia32"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;WITH_MUMPS"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				UsePrecompiledHeader="0"
@@ -223,9 +223,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Direct.lib"
+				AdditionalDependencies="Direct.lib mkl_intel_c.lib mkl_sequential.lib mkl_core.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="../../../../lib/ia32"
+				AdditionalLibraryDirectories="../../../../lib/ia32;$(INTEL_DEF_IA32_INSTALL_DIR)MKL\lib\ia32"
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames="MSVCRT.lib"
 				GenerateDebugInformation="true"
@@ -287,8 +287,8 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="..\..\base\include"
-				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
+				AdditionalIncludeDirectories="..\..\base\include;$(INTEL_DEF_X64_INSTALL_DIR)MKL\Include;$(INTEL_DEF_X64_INSTALL_DIR)MKL\Include\fftw;$(INTEL_DEF_X64_INSTALL_DIR)MKL\Include\intel64"
+				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE;WITH_MUMPS"
 				RuntimeLibrary="0"
 				EnableFunctionLevelLinking="true"
 				OpenMP="false"
@@ -308,9 +308,9 @@
 			/>
 			<Tool
 				Name="VCLinkerTool"
-				AdditionalDependencies="Direct.lib"
+				AdditionalDependencies="Direct.lib mkl_intel_lp64.lib mkl_sequential.lib mkl_core.lib"
 				LinkIncremental="1"
-				AdditionalLibraryDirectories="../../../../lib/x64"
+				AdditionalLibraryDirectories="../../../../lib/x64;$(INTEL_DEF_X64_INSTALL_DIR)MKL\lib\intel64"
 				GenerateManifest="false"
 				IgnoreDefaultLibraryNames="MSVCRT.lib"
 				GenerateDebugInformation="true"
