@@ -7,7 +7,9 @@ File Name: CHANGES
 - Update cmake with several options: shared, openmp, verbose, etc.
 - Add interface to MUMPS.
 - Update interface function names.
-- Change preprocessor: “WITH_DISOLVE” -> “WITH_MUMPS”.
+- Change preprocessor: "WITH_DISOLVE" -> "WITH_MUMPS".
+- Update VS08 solution for the new direct solver interface. 
+- Add a TCL GUI for installing FASP.
 
 02/23/2013 FASP 1.2.2:
 - Prepare to switch from make to cmake.
